--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,30 +1,31 @@
-<section id="characters-new-view" class="section is-fullheight">
+<section id="characters-new-view" class="py-8 min-h-screen bg-gray-50">
 
-    <div class="container">
-      <div class="columns is-centered">
+    <div class="max-w-md mx-auto px-4">
+      <div class="flex justify-center">
+        <div class="w-full">
+          <div class="text-center mb-8">
+            <h1 class="text-3xl font-bold text-gray-900 mb-2">Create New Character</h1>
+            <p class="text-gray-600">Add a new character to your universe</p>
+          </div>
 
-        <div class="column is-4-tablet is-5-desktop">
+          <%= form_with model: @new_character, url: universe_characters_url(universe_id: @new_character.universe_id), html: {class: "bg-white rounded-lg px-8 pt-6 pb-8 shadow-lg"} do |form| %>
 
-          <%= form_with model: @new_character, url: universe_characters_url(universe_id: @new_character.universe_id) do |form| %>
-
-            <div class="field">
-              <%= form.label :name, class: "label" %>
-              <div class="control has-icons-left">
-                <span class="icon is-small is-left">
-                    <%= fa_icon "user" %>
+            <div class="mb-6">
+              <%= form.label :name, class: "block text-gray-700 text-sm font-bold mb-2" %>
+              <div class="relative">
+                <span class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+                    <%= fa_icon "user", class: "text-gray-400" %>
                 </span>
-                <%= form.text_field :name, class: 'input', placeholder: "Tangle", required: true %>
+                <%= form.text_field :name, class: 'w-full pl-10 pr-3 py-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-lg', placeholder: "Enter character name", required: true %>
               </div>
             </div>
 
-            <div class="field">
-              <%= form.submit "Save", class: "button is-info" %>
-              <%= link_to "Cancel", universe_url(@new_character.universe_id), class: "button is-danger" %>
+            <div class="flex flex-col sm:flex-row gap-3">
+              <%= form.submit "Create Character", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg focus:outline-none transition-colors duration-200 flex-1" %>
+              <%= link_to "Cancel", universe_url(@new_character.universe_id), class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-3 px-6 rounded-lg focus:outline-none transition-colors duration-200 flex-1 text-center" %>
             </div>
           <% end %>
-
         </div>
-
       </div>
     </div>
 
