--- a/app/views/shared/_image_list.html.erb
+++ b/app/views/shared/_image_list.html.erb
@@ -5,17 +5,17 @@
       message: "There are no images yet, add some!"
     } %>
   <% else %>
-    <nav aria-label="Pagination" class="block">
+    <nav aria-label="Pagination" class="flex justify-center mb-6">
       <%= will_paginate images %>
     </nav>
-    <div class="image-grid block">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 justify-items-center">
       <% images.each do |image| %>
-        <%= link_to edit_universe_image_url(universe, image), class:"image-tile" do %>
+        <%= link_to edit_universe_image_url(universe, image), class: "block p-1 transition-all duration-200" do %>
           <%= generate_image_tag(image, [250, 400]) %>
         <% end %>
       <% end %>
     </div>
-    <nav aria-label="Pagination" class="block">
+    <nav aria-label="Pagination" class="flex justify-center mt-6">
       <%= will_paginate images %>
     </nav>
   <% end %>
