--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -1,35 +1,37 @@
-<section id="universes-show-view" class="section">
+<section id="universes-show-view" class="py-8 min-h-screen">
 
   <% render partial: "shared/capture_navbar" %>
 
-  <div class="columns is-centered">
-    <div class="column is-one-quarter has-text-centered">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex flex-col lg:flex-row gap-8">
+      <!-- Left Sidebar -->
+      <div class="w-full lg:w-1/4">
+        <div class="bg-white rounded-lg p-6 shadow-lg">
+          <h2 class="text-xl font-semibold text-gray-800 mb-4 text-center">Upload & Characters</h2>
 
-      <%= form_with model: Image.new(universe_id: @universe.id), url: universe_images_url(@universe), method: "post" do | form | %>
+          <%= form_with model: Image.new(universe_id: @universe.id), url: universe_images_url(@universe), method: "post", class: "mb-6" do | form | %>
+            <%= form.submit "Upload Image", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-full mb-3 transition-colors duration-200" %>
+            <%= form.file_field :image_file, required: true, class: "w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100" %>
+          <% end %>
 
-        <%= form.submit "Upload Image", class: "button is-primary block" %>
-        <%= form.file_field :image_file, required: true, class: "block has-text-centered" %>
+          <hr class="my-6" />
 
-      <% end %>
+          <%= render partial: "shared/character_selector", locals: {
+            characters: @universe.characters,
+            unique_id: "universe"
+          } %>
+        </div>
+      </div>
 
-      <hr />
-
-      <table class="table is-fullwidth is-striped">
-        <% @universe.characters.sort_by {|c| c.name }.each do |character| %>
-          <tr>
-            <td>
-              <%= link_to character.name, character_path(character) %>
-            </td>
-          </tr>
-        <% end %>
-      </table>
-
-    </div>
-    <div class="column is-three-quarters">
-      <%= render partial: "shared/image_list", locals: {
-        images: @images,
-        universe: @universe
-      } %>
+      <!-- Main Content -->
+      <div class="w-full lg:w-3/4">
+        <div class="bg-white rounded-lg p-6">
+          <%= render partial: "shared/image_list", locals: {
+            images: @images,
+            universe: @universe
+          } %>
+        </div>
+      </div>
     </div>
   </div>
 
