--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -14,7 +14,7 @@
               <%= form.label :name, class: "block text-gray-700 text-sm font-bold mb-2" %>
               <div class="relative">
                 <span class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-                    <%= fa_icon "user", class: "text-gray-400" %>
+                    <span class="text-gray-400">👤</span>
                 </span>
                 <%= form.text_field :name, class: 'w-full pl-10 pr-3 py-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-lg', placeholder: "Enter character name", required: true %>
               </div>
