--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
           <%= form.label :email, for: "newUserRegisterEmail", class: "block text-gray-700 text-sm font-bold mb-2" %>
           <div class="relative">
             <span class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <%= fa_icon "envelope", class: "text-gray-400" %>
+              <span class="text-gray-400">✉️</span>
             </span>
             <%= form.email_field :email, autofocus: true, autocomplete: "email", id: "newUserRegisterEmail", class: 'w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500', placeholder: "your_email@gmail.com", required: true %>
           </div>
@@ -23,7 +23,7 @@
           <%= form.label :display_name, for: "newUserRegisterDisplayname", class: "block text-gray-700 text-sm font-bold mb-2" %>
           <div class="relative">
             <span class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <%= fa_icon "user", class: "text-gray-400" %>
+              <span class="text-gray-400">👤</span>
             </span>
             <%= form.text_field :display_name, autocomplete: "display name", id: "newUserRegisterDisplayname", class: 'w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500', placeholder: "CoolUser69", required: true %>
           </div>
@@ -33,7 +33,7 @@
           <%= form.label :password, for: "newUserRegisterPassword", class: "block text-gray-700 text-sm font-bold mb-2" %>
           <div class="relative">
             <span class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <%= fa_icon "lock", class: "text-gray-400" %>
+              <span class="text-gray-400">🔒</span>
             </span>
             <%= form.password_field :password, id: "newUserRegisterPassword", class: 'w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500', required: true  %>
           </div>
@@ -43,7 +43,7 @@
           <%= form.label :password_confirmation, for: "newUserRegisterPasswordconfirmation", class: "block text-gray-700 text-sm font-bold mb-2" %>
           <div class="relative">
             <span class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <%= fa_icon "lock", class: "text-gray-400" %>
+              <span class="text-gray-400">🔒</span>
             </span>
             <%= form.password_field :password_confirmation, id: "newUserRegisterPasswordconfirmation", class: 'w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500', required: true  %>
           </div>
