--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -12,7 +12,7 @@
           <% if @universes.empty? %>
             <div class="text-center py-8">
               <div class="w-16 h-16 bg-gray-100 rounded-full flex items-center justify-center mx-auto mb-4">
-                <%= fa_icon "rocket", class: "text-2xl text-gray-400" %>
+                <span class="text-2xl text-gray-400">🚀</span>
               </div>
               <h3 class="text-lg font-semibold text-gray-600 mb-2">No universes yet</h3>
               <p class="text-gray-500">Create your first universe to get started</p>
@@ -24,9 +24,9 @@
                 <%= link_to universe_path(universe), class: "block" do %>
                   <div class="flex items-center justify-between p-4 bg-gray-50 rounded-lg hover:bg-gray-100 transition-colors duration-200">
                     <div class="flex items-center">
-                      <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center mr-4">
-                        <%= fa_icon "rocket", class: "text-blue-600" %>
-                      </div>
+                    <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center mr-4">
+                      <span class="text-blue-600">🚀</span>
+                    </div>
                       <div class="flex flex-col">
                         <span class="text-gray-900 font-medium"><%= universe.name %></span>
                         <span class="text-sm text-gray-500"><%= pluralize(universe.characters.count, 'character') %></span>
@@ -37,7 +37,7 @@
                         <%= pluralize(universe.images.count, 'image') %>
                       </span>
                       <div class="text-blue-600 p-2 rounded-full">
-                        <%= fa_icon "arrow-right" %>
+                        <span>→</span>
                       </div>
                     </div>
                   </div>
