--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col lg:flex-row gap-8">
       <!-- Left Sidebar -->
-      <div class="w-full lg:w-1/3">
+      <div class="w-full lg:w-1/3 order-2 lg:order-1">
         <div class="bg-white rounded-lg p-6 shadow-lg">
 
       <%# Favorite Image %>
@@ -61,7 +61,7 @@
       </div>
 
       <!-- Main Image Display -->
-      <div class="w-full lg:w-2/3">
+      <div class="w-full lg:w-2/3 order-1 lg:order-2">
         <div class="bg-white rounded-lg p-6">
           <div class="flex justify-center">
             <%= link_to view_image_path(@image, @image.image_file.filename) do %>
