--- a/app/views/shared/_image_list.html.erb
+++ b/app/views/shared/_image_list.html.erb
@@ -6,7 +6,7 @@
     } %>
   <% else %>
     <!-- Pagination at top -->
-    <%= render partial: "shared/mobile_pagination", locals: { collection: images } %>
+    <%= render partial: "shared/pagination", locals: { collection: images } %>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 justify-items-center">
       <% images.each do |image| %>
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Pagination at bottom -->
-    <%= render partial: "shared/mobile_pagination", locals: { collection: images } %>
+    <%= render partial: "shared/pagination", locals: { collection: images } %>
   <% end %>
 
 </section>
