--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -5,7 +5,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col lg:flex-row gap-8">
       <!-- Left Sidebar -->
-      <div class="w-full lg:w-1/4">
+      <div class="w-full lg:w-1/4 order-2 lg:order-1">
         <div class="bg-white rounded-lg p-6 shadow-lg">
           <h2 class="text-xl font-semibold text-gray-800 mb-4 text-center">Upload & Characters</h2>
 
@@ -24,7 +24,7 @@
       </div>
 
       <!-- Main Content -->
-      <div class="w-full lg:w-3/4">
+      <div class="w-full lg:w-3/4 order-1 lg:order-2">
         <div class="bg-white rounded-lg p-6">
           <%= render partial: "shared/image_list", locals: {
             images: @images,
